--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2",
     "vite": "^2.5.3",
-    "vite-plugin-components": "^0.13.3"
+    "vite-plugin-style-import": "^1.2.1"
   },
   "keywords": [
     "vite",
